Archive2/8d/98136eb63c85e7/output
main.cpp:11:6: error: expected initializer before '<' token
 int S<T>::i = 0;
      ^
